- Service Facade
  - Added separateThread option to sync service call as an alternative to
    requireNewTransaction which does a suspend/resume, runs service in a
    separate thread and waits for the service to complete
  - Added service.@semaphore-parameter attribute which creates a distinct
    semaphore per value of that parameter

Bug Fixes

- DB operations for sequenced IDs, service semaphores, and DB meta data are
  now run in a separate thread instead of tx suspend/resume as some
  databases have issues with suspend/resume, especially multiple
  outstanding suspended transactions
- Fixed issue with conditional default subscreen URL caching
- Internal login from login/api key and async/scheduled services now checks
  for disabled accounts, expired passwords, etc just like normal login
- Fixed issue with entity lists in TransactionCache, were not cloned so
  new/updated records changed lists that calling code might use
- Fixed issue with cached entity lists not getting cleared when a record is
  updated that wasn't in a list already in the cache but that matches its
  condition
- Fixed issue with cached view-entity lists not getting cleared on new or
  updated records; fixes issues with new authz, tarpits and much more not
  applied immediately
- Entities in the tenantcommon group no longer available for find and CrUD
  operations outside the DEFAULT instance (protect tenant data)
- Fixed ElasticSearch automatic mappings where sub-object mappings always
  had just the first property


===========================================================================
Release 1.6.1 - 24 Jan 2016
===========================================================================

Moqui Framework 1.6.1 is a minor new feature and bug fix release.

This is the first release after the repository reorganization in Moqui 
Ecosystem. The runtime directory is now in a separate repository. The 
framework build now gets JAR files from Bintray JCenter instead of having